<resources>
    <string name="app_name">The Engineers Friend</string>

    <string name="ohmslaw_prompt">Choose a variable you want to calculate</string>

    <string-array name="ohmslaw_variable_array">
        <item>Voltage</item>
        <item>Current</item>
        <item>Resistance</item>
    </string-array>

    <string name="findresistor_prompt">Choose the colour of the band</string>

    <string-array name="findresistor_variable_array">
        <item>Blank</item>
        <item>Black</item>
        <item>Brown</item>
        <item>Red</item>
        <item>Orange</item>
        <item>Yellow</item>
        <item>Green</item>
        <item>Blue</item>
        <item>Violet</item>
        <item>Grey</item>
        <item>White</item>
    </string-array>

    <string-array name="findresistor_multiplier_array">
        <item>Black</item>
        <item>Brown</item>
        <item>Red</item>
        <item>Orange</item>
        <item>Yellow</item>
        <item>Green</item>
        <item>Blue</item>
        <item>Violet</item>
        <item>Grey</item>
        <item>White</item>
    </string-array>


    <string name="power_prompt">Choose a variable you want to calculate</string>

    <string-array name="power_variable_array">
        <item>Voltage</item>
        <item>Current</item>
        <item>Power</item>
    </string-array>


    <string name="colour_prompt">Choose a colour for the background</string>
    <string name="apply">Apply</string>
    <string name="calculate_power_when_using_ohms_law">Calculate Power when using Ohms Law</string>
    <string name="ohm">Ω</string>
    <string name="a">A</string>
    <string name="resistance">Resistance:</string>
    <string name="voltage">Voltage:</string>
    <string name="ohms_law">Ohms Law</string>
    <string name="find_resistor_size">Find Resistor Size</string>
    <string name="the_engineers_friend">The Engineers Friend</string>
    <string name="settings">Settings</string>
    <string name="_1">1</string>
    <string name="current">Current:</string>
    <string name="v">V</string>
    <string name="w">W</string>
    <string name="power">Power:</string>
    <string name="_1st_band">1st Band</string>
    <string name="resistor_value">Resistor Value:</string>
    <string name="_4th_band">4th Band</string>
    <string name="calculate">Calculate</string>
    <string name="_5th_band">5th Band</string>
    <string name="_2nd_band">2nd Band</string>
    <string name="band_coulor">Band Coulor</string>
    <string name="_3rd_band">3rd Band</string>
    <string name="ohms_law_calculator">Ohms Law Calculator</string>
    <string name="resistor_size_calculator">Resistor Size Calculator</string>

    <string-array name="colour_variable_array">
        <item>Blue</item>
        <item>Green</item>
        <item>Red</item>
        <item>White</item>
    </string-array>

</resources>
